codegen/ui_tests/export_fn_extra_value.stderr
error: extraneous value
  --> ui_tests/export_fn_extra_value.rs:10:26
   |
10 | #[export_fn(return_raw = "yes")]
   |                          ^^^^^
